fixed dashboard button alignment

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
     padding: 20px;
     position: relative;
     display: grid;
-    grid-template-columns: 70px 1fr 1fr;
+    grid-template-columns: 50px 1fr 1fr;
     grid-template-rows: 60px 200px 1fr;
     grid-gap: 15px;
 }
